--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Nihol by icecool</title>
+    <meta name="description" content="Nihol : Light PHP framework">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Nihol</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Nihol</h1>
-        <p>Light PHP framework</p>
 
-        <p class="view"><a href="https://github.com/icecool/nihol">View the Project on GitHub <small>icecool/nihol</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/icecool/nihol">View on GitHub</a>
 
+          <h1 id="project_title">Nihol</h1>
+          <h2 id="project_tagline">Light PHP framework</h2>
 
-        <ul>
-          <li><a href="https://github.com/icecool/nihol/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/icecool/nihol/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/icecool/nihol">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/icecool/nihol/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/icecool/nihol/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="nihol" class="anchor" href="#nihol" aria-hidden="true"><span class="octicon octicon-link"></span></a>NIHOL.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Open source lightweight php-framework, which powered by tajik developers from CODE.TJ team:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -60,12 +63,17 @@ $ git checkout gh-pages
 
 <p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/icecool">icecool</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Nihol maintained by <a href="https://github.com/icecool">icecool</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
